--- a/install_apache.yml
+++ b/install_apache.yml
@@ -7,11 +7,14 @@
   - name: update repository index
     dnf:
       update_cache: yes
+    when: ansible_distribution == "Rocky"
 
   - name: install httpd package
     dnf:
       name: httpd
       state: latest
+    when: ansible_distribution == "Rocky"
+  
   - name: add php support for apache
     dnf:
       name:
@@ -20,5 +23,6 @@
         - php-mysqlnd
         - php-gd
       state: latest
-      
+    when: ansible_distribution == "Rocky"
+
 
